[gd_scene load_steps=27 format=3 uid="uid://687j37fv8877"]

[ext_resource type="Script" path="res://character_script.gd" id="1_1wpy1"]
[ext_resource type="Script" path="res://levels-scripts/level_10_script.gd" id="1_aur7n"]
[ext_resource type="SpriteFrames" uid="uid://gtxt1ly4x1kq" path="res://character_anim.tres" id="2_pmjpx"]
[ext_resource type="AudioStream" uid="uid://did7rv621lxv1" path="res://sfx/light-switch-81967.mp3" id="3_ooc0o"]
[ext_resource type="TileSet" uid="uid://c4crmo1po74jt" path="res://raw_map_tile_set.tres" id="4_oj0dh"]
[ext_resource type="Texture2D" uid="uid://dodimdsaeofg2" path="res://vendor/1-Bit Platformer Pack/Tiles/Transparent/tile_0097.png" id="5_8hjtb"]
[ext_resource type="AudioStream" uid="uid://cmi0y0sx75m8n" path="res://sfx/landing.wav" id="5_tyx01"]
[ext_resource type="AudioStream" uid="uid://d2hptohti3ffr" path="res://sfx/350905__cabled_mess__jump_c_05.wav" id="6_gwd1l"]
[ext_resource type="SpriteFrames" uid="uid://d0dbjj6xx7jjl" path="res://door_anim.tres" id="6_od7a3"]
[ext_resource type="Texture2D" uid="uid://b4fg2kx57xe6l" path="res://switch.png" id="7_bolw0"]
[ext_resource type="AudioStream" uid="uid://b4wsmff00tpa4" path="res://sfx/646672__sounddesignforyou__coin-pickup-sfx-2.wav" id="7_df5bh"]
[ext_resource type="Script" path="res://BackgroundColor.gd" id="8_otfcp"]
[ext_resource type="AudioStream" uid="uid://bm0fw758kdtxr" path="res://sfx/443276__loscolt890__gravelfootstep003.wav" id="8_p5dr8"]
[ext_resource type="Script" path="res://moving_platform.gd" id="9_2tkre"]
[ext_resource type="AudioStream" uid="uid://bax220aygkbcx" path="res://sfx/443277__loscolt890__gravelfootstep002.wav" id="9_irywv"]
[ext_resource type="AudioStream" uid="uid://yl7a41422l1" path="res://sfx/443278__loscolt890__gravelfootstep001.wav" id="10_slmcm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xyr5i"]
size = Vector2(7, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2boxm"]
size = Vector2(2, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7tvwx"]
size = Vector2(4.25, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lccq"]
size = Vector2(11, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eh0eq"]
size = Vector2(7, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pw2v7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_euvql"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jk3o"]
size = Vector2(48, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ljfn"]
size = Vector2(20, 369)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rwov1"]
size = Vector2(20, 369)

[node name="main" type="Node2D"]
script = ExtResource("1_aur7n")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="CharacterBody2D" type="CharacterBody2D" parent="." node_paths=PackedStringArray("spawn")]
z_index = 1
position = Vector2(372, 131)
collision_mask = 6
script = ExtResource("1_1wpy1")
GRAVITY = 9.81
jump_force = 80.0
walk_velocity = 120.0
mass = 15.0
spawn = NodePath("../SpawnMark")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(1, -6)
sprite_frames = ExtResource("2_pmjpx")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-0.75, 2)
shape = SubResource("RectangleShape2D_xyr5i")

[node name="Foot" type="Area2D" parent="CharacterBody2D"]
position = Vector2(0, 20)
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Foot"]
position = Vector2(-0.75, -13.5)
shape = SubResource("RectangleShape2D_2boxm")
debug_color = Color(0.913725, 0.235294, 0.443137, 0.419608)

[node name="Pick" type="Area2D" parent="CharacterBody2D"]
collision_mask = 480

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Pick"]
position = Vector2(3.375, 2)
shape = SubResource("RectangleShape2D_7tvwx")
debug_color = Color(0.92549, 0.152941, 0.572549, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CharacterBody2D/Pick"]
position = Vector2(-5, 2)
shape = SubResource("RectangleShape2D_7tvwx")
debug_color = Color(0.92549, 0.152941, 0.572549, 0.419608)

[node name="RespawnTimer" type="Timer" parent="CharacterBody2D"]
one_shot = true

[node name="Body" type="Area2D" parent="CharacterBody2D"]
position = Vector2(-2, -4)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Body"]
position = Vector2(0.5, 3)
shape = SubResource("RectangleShape2D_4lccq")

[node name="ClickSound" type="AudioStreamPlayer" parent="CharacterBody2D"]
stream = ExtResource("3_ooc0o")

[node name="Land" type="AudioStreamPlayer" parent="CharacterBody2D"]
stream = ExtResource("5_tyx01")
volume_db = -10.0

[node name="Jump" type="AudioStreamPlayer" parent="CharacterBody2D"]
stream = ExtResource("6_gwd1l")

[node name="KeyPick" type="AudioStreamPlayer" parent="CharacterBody2D"]
stream = ExtResource("7_df5bh")
volume_db = -3.0

[node name="FootstepsSFX" type="Node" parent="CharacterBody2D"]

[node name="FS1" type="AudioStreamPlayer" parent="CharacterBody2D/FootstepsSFX"]
stream = ExtResource("8_p5dr8")
volume_db = -12.0
pitch_scale = 3.0

[node name="FS2" type="AudioStreamPlayer" parent="CharacterBody2D/FootstepsSFX"]
stream = ExtResource("9_irywv")
volume_db = -12.0
pitch_scale = 3.0

[node name="FS3" type="AudioStreamPlayer" parent="CharacterBody2D/FootstepsSFX"]
stream = ExtResource("10_slmcm")
volume_db = -12.0
pitch_scale = 3.0

[node name="SpawnMark" type="Marker2D" parent="."]
position = Vector2(388, 119)

[node name="Map" type="Node" parent="."]

[node name="Terrain" type="TileMap" parent="Map" groups=["terrain"]]
tile_set = ExtResource("4_oj0dh")
format = 2
layer_0/tile_data = PackedInt32Array(65535, 524288, 5, 0, 524288, 5, 3, 524288, 5, 4, 524288, 6, 5, 524288, 6, 6, 524288, 6, 7, 524288, 6, 8, 524288, 6, 9, 524288, 6, 10, 524288, 6, 11, 524288, 6, 12, 524288, 5, 13, 524288, 5, 14, 524288, 5, 15, 524288, 5, 16, 524288, 5, 17, 524288, 6, 18, 524288, 6, 19, 524288, 6, 20, 524288, 6, 21, 524288, 6, 22, 524288, 5, 23, 524288, 5, 24, 524288, 5, 25, 524288, 5, 26, 524288, 5, 27, 524288, 6, 28, 524288, 6, 29, 524288, 6, 30, 524288, 6, 31, 524288, 6, 32, 524288, 6, 33, 524288, 6, 34, 524288, 6, 35, 524288, 5, 36, 524288, 5, 37, 524288, 5, 38, 524288, 5, 39, 524288, 5, 65536, 524288, 5, 131072, 589824, 5, 196608, 589824, 5, 262144, 589824, 5, 327679, 524288, 5, 262143, 524288, 5, 196607, 524288, 5, 131071, 524288, 5, 393215, 524288, 5, 458751, 524288, 5, 524287, 524288, 5, 393216, 589824, 5, 327680, 524288, 5, 458752, 589824, 5, 524288, 589824, 5, 589823, 524288, 5, 655359, 524288, 5, 720895, 524288, 5, 589824, 524288, 5, 655360, 589824, 5, 786431, 524288, 5, 851967, 524288, 5, 786432, 589824, 5, 851968, 524288, 5, 917504, 589824, 5, 983039, 524288, 5, 1048575, 524288, 5, 917503, 524288, 5, 983040, 589824, 5, 1114111, 524288, 5, 720896, 589824, 5, 1048576, 589824, 5, 1179647, 524288, 5, 1245183, 524288, 5, 1310719, 524288, 5, 1376255, 524288, 5, 1441791, 524288, 5, 1376256, 524288, 5, 1310720, 524288, 5, 1245184, 589824, 5, 1179648, 589824, 5, 1114112, 524288, 5, 1507327, 524288, 5, 1441792, 524288, 5, 1441793, 524288, 5, 1441794, 524288, 5, 1441795, 524288, 5, 1441796, 524288, 5, 1441797, 524288, 5, 1441798, 524288, 5, 1441799, 524288, 5, 1441800, 524288, 5, 1441801, 524288, 5, 1441802, 524288, 5, 1441803, 524288, 5, 1441804, 524288, 5, 1441805, 524288, 5, 1441806, 524288, 5, 1441807, 524288, 5, 1441808, 524288, 5, 1441809, 524288, 5, 1441810, 524288, 5, 1441811, 524288, 5, 1441812, 524288, 5, 1441813, 524288, 5, 1441814, 524288, 5, 1441815, 524288, 5, 1441816, 524288, 5, 1441817, 524288, 5, 1441818, 524288, 5, 1441819, 524288, 5, 1441820, 524288, 5, 1441821, 524288, 5, 1441822, 524288, 5, 1441823, 524288, 5, 1441824, 524288, 5, 1441825, 524288, 5, 1441826, 524288, 5, 1441827, 524288, 5, 1441828, 524288, 5, 1441829, 524288, 5, 1441830, 524288, 5, 1441831, 524288, 5, 65574, 524288, 5, 65575, 524288, 5, 131111, 524288, 5, 131110, 458752, 5, 196646, 458752, 5, 196647, 524288, 5, 262183, 524288, 5, 327719, 524288, 5, 327718, 524288, 5, 393254, 458752, 5, 393255, 524288, 5, 458791, 524288, 5, 524327, 524288, 5, 589863, 524288, 5, 655399, 524288, 5, 720935, 524288, 5, 786471, 524288, 5, 786470, 458752, 5, 852006, 524288, 5, 917542, 458752, 5, 983078, 458752, 5, 1048614, 458752, 5, 1114150, 524288, 5, 1179686, 458752, 5, 1245222, 458752, 5, 1310758, 524288, 5, 1376294, 524288, 5, 1376295, 524288, 5, 1310759, 524288, 5, 1245223, 524288, 5, 852007, 524288, 5, 917543, 524288, 5, 983079, 524288, 5, 1048615, 524288, 5, 1114151, 524288, 5, 1179687, 524288, 5, 720934, 458752, 5, 655398, 458752, 5, 589862, 524288, 5, 524326, 524288, 5, 262182, 458752, 5, 458790, 524288, 5, 1, 524288, 5, 2, 524288, 5, 1376293, 524288, 5, 1376292, 524288, 5, 1376291, 524288, 5, 1376290, 524288, 5, 1376289, 524288, 5, 1376288, 524288, 5, 1376287, 524288, 5, 1376286, 524288, 5, 1376285, 524288, 5, 1376284, 524288, 5, 1376283, 524288, 5, 1376282, 524288, 5, 1376281, 524288, 5, 1376280, 524288, 5, 1376279, 524288, 5, 1376278, 524288, 5, 1376277, 524288, 5, 1376276, 524288, 5, 1376275, 524288, 5, 1376274, 524288, 5, 1376273, 524288, 5, 1376272, 524288, 5, 1376271, 524288, 5, 1376270, 524288, 5, 1376269, 524288, 5, 1376268, 524288, 5, 1376267, 524288, 5, 1376266, 524288, 5, 1376265, 524288, 5, 1376264, 524288, 5, 1376263, 524288, 5, 1376262, 524288, 5, 1376261, 524288, 5, 1376260, 524288, 5, 1376259, 524288, 5, 1376258, 524288, 5, 1376257, 524288, 5, 655373, 458752, 4, 720909, 458752, 5, 655382, 458752, 4, 720918, 458752, 5, 786454, 458752, 5, 655391, 458752, 4, 720927, 458752, 5, 786463, 458752, 5, 655374, 524288, 4, 720910, 524288, 5, 655375, 524288, 4, 720911, 524288, 5, 655376, 589824, 4, 720912, 589824, 5, 786448, 589824, 5, 655383, 524288, 4, 720919, 524288, 5, 786455, 524288, 5, 655384, 524288, 4, 720920, 524288, 5, 786456, 524288, 5, 655385, 589824, 4, 720921, 589824, 5, 786457, 589824, 5, 655392, 524288, 4, 720928, 524288, 5, 786464, 524288, 5, 655393, 524288, 4, 720929, 524288, 5, 786465, 524288, 5, 655394, 589824, 4, 720930, 524288, 5, 786466, 589824, 5, 393229, 458752, 5, 393230, 589824, 5, 327694, 589824, 5, 327693, 524288, 5, 262157, 524288, 5, 262158, 589824, 5, 196622, 589824, 5, 196621, 458752, 5, 131085, 524288, 5, 131086, 524288, 5, 65549, 524288, 5, 65550, 524288, 5, 458765, 458752, 6, 458766, 589824, 6, 1114121, 524288, 4, 1114122, 524288, 4, 1114130, 524288, 4, 1114131, 524288, 4, 1114140, 524288, 4, 1114141, 524288, 4, 1114149, 524288, 4, 983075, 524288, 4, 852005, 524288, 4, 720931, 524288, 5, 327692, 524288, 6, 327691, 524288, 6, 327690, 524288, 6, 327689, 524288, 6, 327688, 458752, 6, 262152, 458752, 4, 262153, 524288, 4, 262154, 524288, 4, 262155, 524288, 4, 262156, 524288, 4, 1114113, 524288, 4, 983043, 524288, 4, 851969, 524288, 4, 720899, 524288, 4, 589825, 524288, 4, 458755, 524288, 4, 327681, 524288, 4, 262147, 524288, 4, 589861, 524288, 4, 458787, 524288, 4, 327717, 524288, 4, 262179, 524288, 4, 458777, 589824, 6, 458776, 458752, 6, 393240, 458752, 5, 393241, 589824, 5, 327705, 524288, 5, 327704, 458752, 5, 262168, 458752, 5, 196632, 458752, 5, 131096, 524288, 5, 65560, 524288, 5, 65561, 524288, 5, 131097, 524288, 5, 196633, 589824, 5, 262169, 524288, 5, 262170, 524288, 4, 262171, 524288, 4, 262172, 524288, 4, 262173, 524288, 4, 262174, 589824, 4, 327710, 589824, 6, 327709, 524288, 6, 327708, 524288, 6, 327707, 524288, 6, 327706, 524288, 6, 786445, 458752, 5, 786446, 524288, 5, 786447, 524288, 5, 131088, 589824, 6, 131094, 458752, 6, 65551, 524288, 5, 65559, 524288, 5, 131087, 524288, 6, 131095, 524288, 6, 65552, 589824, 5, 65558, 458752, 5, 131084, 458752, 6, 131098, 589824, 6, 65562, 589824, 5, 65548, 458752, 5, 65571, 458752, 6, 65572, 524288, 6, 65573, 524288, 6, 65539, 589824, 6, 65538, 524288, 6, 65537, 524288, 6, 1310721, 524288, 4, 1310722, 524288, 4, 1310723, 524288, 4, 1310755, 524288, 4, 1310756, 524288, 4, 1310757, 524288, 4, 1310732, 524288, 4, 1310733, 524288, 4, 1310734, 524288, 4, 1310735, 524288, 4, 1310742, 524288, 4, 1310743, 524288, 4, 1310744, 524288, 4, 1310745, 524288, 4, 1310746, 524288, 4, 1310736, 524288, 4)

[node name="RedTrap" type="TileMap" parent="Map" groups=["red", "trap"]]
tile_set = ExtResource("4_oj0dh")
format = 2
layer_0/tile_data = PackedInt32Array(589839, 196608, 131081, 1048585, 196608, 131081, 1048586, 196608, 131081, 1048594, 196608, 131081, 1048595, 196608, 131081, 1048604, 196608, 131081, 1048605, 196608, 131081)

[node name="RedTerrain" type="TileMap" parent="Map" groups=["red"]]
tile_set = ExtResource("4_oj0dh")
format = 2

[node name="BlueTerrain" type="TileMap" parent="Map" groups=["blue"]]
tile_set = ExtResource("4_oj0dh")
format = 2
layer_0/tile_data = PackedInt32Array(393246, 917504, 65553, 393247, 1048576, 65553, 524319, 1048576, 65555, 524318, 917504, 65555, 458783, 1048576, 65554, 458782, 917504, 65554, 655364, 917504, 65553, 786436, 917504, 65554, 720900, 917504, 65554, 720903, 1048576, 65554, 786439, 1048576, 65554, 655367, 1048576, 65553, 655365, 983040, 65553, 655366, 983040, 65553, 720901, 983040, 65554, 720902, 983040, 65554, 786438, 983040, 65554, 786437, 983040, 65554)

[node name="BlueTrap" type="TileMap" parent="Map" groups=["blue", "trap"]]
tile_set = ExtResource("4_oj0dh")
format = 2
layer_0/tile_data = PackedInt32Array(1310747, 196608, 65545, 1310748, 196608, 65545, 1310749, 196608, 65545, 1310750, 196608, 65545, 1310751, 196608, 65545, 1310752, 196608, 65545, 1310753, 196608, 65545, 1310754, 196608, 65545, 1310730, 196608, 65545, 1310731, 196608, 65545, 1310737, 196608, 65545, 1310738, 196608, 65545, 1310739, 196608, 65545, 1310740, 196608, 65545, 1310741, 196608, 65545, 1310724, 196608, 65545, 1310725, 196608, 65545, 1310726, 196608, 65545, 1310727, 196608, 65545, 1310728, 196608, 65545, 1310729, 196608, 65545, 851972, 131072, 393222, 851973, 131072, 393222, 851974, 131072, 393222, 851975, 131072, 393222, 851982, 131072, 393222, 851983, 131072, 393222, 851990, 131072, 393222, 851991, 131072, 393222, 851992, 131072, 393222, 851993, 131072, 393222, 851999, 131072, 393222, 852000, 131072, 393222, 852001, 131072, 393222, 852002, 131072, 393222, 851984, 131072, 393222, 851981, 131072, 393222, 1245206, 196608, 65545, 1245207, 196608, 65545, 1245208, 196608, 65545, 1245209, 196608, 65545, 1245210, 196608, 65545, 1245219, 196608, 65545, 1245220, 196608, 65545, 1245221, 196608, 65545, 1245200, 196608, 65545, 1245199, 196608, 65545, 1245198, 196608, 65545, 1245197, 196608, 65545, 1245196, 196608, 65545, 1245187, 196608, 65545, 1245186, 196608, 65545, 1245185, 196608, 65545)

[node name="Key" type="Node2D" parent="Map"]
position = Vector2(529, 149)

[node name="Area2D" type="Area2D" parent="Map/Key" groups=["key"]]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Key/Area2D"]
shape = SubResource("RectangleShape2D_eh0eq")
debug_color = Color(0.317647, 0.619608, 0.27451, 0.419608)

[node name="KeySprite" type="Sprite2D" parent="Map/Key"]
texture = ExtResource("5_8hjtb")

[node name="Door" type="Node2D" parent="Map"]
position = Vector2(162, 56)

[node name="Area2D" type="Area2D" parent="Map/Door" groups=["door"]]
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Door/Area2D"]
shape = SubResource("RectangleShape2D_pw2v7")
debug_color = Color(0.686275, 0.494118, 0.219608, 0.419608)

[node name="DoorSprite" type="AnimatedSprite2D" parent="Map/Door"]
sprite_frames = ExtResource("6_od7a3")

[node name="BlueSwitch" type="Node2D" parent="Map"]
position = Vector2(312, 110)

[node name="Sprite2D" type="Sprite2D" parent="Map/BlueSwitch"]
texture = ExtResource("7_bolw0")

[node name="BlueSwitch" type="Area2D" parent="Map/BlueSwitch" groups=["blue_switch"]]
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/BlueSwitch/BlueSwitch"]
shape = SubResource("RectangleShape2D_euvql")
debug_color = Color(0.784314, 0.431373, 0.0823529, 0.419608)

[node name="RedSwitch" type="Node2D" parent="Map"]
position = Vector2(136, -113)

[node name="Sprite2D" type="Sprite2D" parent="Map/RedSwitch"]
texture = ExtResource("7_bolw0")

[node name="RedSwitch" type="Area2D" parent="Map/RedSwitch"]
collision_layer = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/RedSwitch/RedSwitch"]
shape = SubResource("RectangleShape2D_euvql")
debug_color = Color(0.784314, 0.431373, 0.0823529, 0.419608)

[node name="BackgroundColor" type="Node2D" parent="Map"]
z_index = -1
script = ExtResource("8_otfcp")

[node name="MPS" type="Node" parent="Map"]

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="Map/MPS" node_paths=PackedStringArray("init", "end")]
modulate = Color(0.380392, 0.4, 1, 1)
position = Vector2(15, 291)
collision_layer = 2
script = ExtResource("9_2tkre")
init = NodePath("../MPSInit")
end = NodePath("../MPSEnd")

[node name="Platform" type="TileMap" parent="Map/MPS/AnimatableBody2D"]
position = Vector2(-16, 0)
tile_set = ExtResource("4_oj0dh")
format = 2
layer_0/tile_data = PackedInt32Array(1, 262144, 4, 2, 327680, 4, 3, 393216, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/MPS/AnimatableBody2D"]
position = Vector2(24, 3.5)
shape = SubResource("RectangleShape2D_0jk3o")

[node name="MPSInit" type="Marker2D" parent="Map/MPS"]
position = Vector2(15, 291)

[node name="MPSEnd" type="Marker2D" parent="Map/MPS"]
position = Vector2(265, 291)

[node name="MPS2" type="Node" parent="Map"]

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="Map/MPS2" node_paths=PackedStringArray("init", "end")]
modulate = Color(0.380392, 0.4, 1, 1)
position = Vector2(561, 291)
collision_layer = 2
script = ExtResource("9_2tkre")
init = NodePath("../MPSInit")
end = NodePath("../MPSEnd")

[node name="Platform" type="TileMap" parent="Map/MPS2/AnimatableBody2D"]
position = Vector2(-16, 0)
tile_set = ExtResource("4_oj0dh")
format = 2
layer_0/tile_data = PackedInt32Array(1, 262144, 4, 2, 327680, 4, 3, 393216, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/MPS2/AnimatableBody2D"]
position = Vector2(24, 3.5)
shape = SubResource("RectangleShape2D_0jk3o")

[node name="MPSInit" type="Marker2D" parent="Map/MPS2"]
position = Vector2(561, 291)

[node name="MPSEnd" type="Marker2D" parent="Map/MPS2"]
position = Vector2(313, 291)

[node name="LeftWall" type="StaticBody2D" parent="Map"]
position = Vector2(-8, 362)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/LeftWall"]
position = Vector2(0, -174.5)
shape = SubResource("RectangleShape2D_2ljfn")

[node name="RightWall" type="StaticBody2D" parent="Map"]
position = Vector2(631, 362)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/RightWall"]
position = Vector2(0, -174.5)
shape = SubResource("RectangleShape2D_rwov1")

[node name="NextSceneTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="animation_finished" from="CharacterBody2D/AnimatedSprite2D" to="CharacterBody2D" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="CharacterBody2D/Foot" to="CharacterBody2D" method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="CharacterBody2D/Pick" to="CharacterBody2D" method="_on_pick_area_entered"]
[connection signal="timeout" from="CharacterBody2D/RespawnTimer" to="CharacterBody2D" method="_on_respawn_timer_timeout"]
[connection signal="body_entered" from="CharacterBody2D/Body" to="CharacterBody2D" method="_on_body_body_entered"]
[connection signal="area_entered" from="Map/Door/Area2D" to="CharacterBody2D" method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Map/BlueSwitch/BlueSwitch" to="CharacterBody2D" method="_on_blue_switch_area_entered"]
[connection signal="area_exited" from="Map/BlueSwitch/BlueSwitch" to="CharacterBody2D" method="_on_blue_switch_area_exited"]
[connection signal="area_entered" from="Map/RedSwitch/RedSwitch" to="CharacterBody2D" method="_on_red_switch_area_entered"]
[connection signal="area_exited" from="Map/RedSwitch/RedSwitch" to="CharacterBody2D" method="_on_red_switch_area_exited"]
[connection signal="timeout" from="NextSceneTimer" to="." method="_on_next_scene_timer_timeout"]
